mobile responsive: portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,18 +1,22 @@
+<!DOCTYPE html>
 <html lang="en-us">
-<link href="styles.css" rel="stylesheet" />
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/dark.min.css">
+<head>
+    <meta name="viewport" content="width=device-width">
+    <link href="styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/dark.min.css">
+</head>
 <body>
 <nav>
-	<div class="site-title">
-		<h3>Data Science</h3>
-		<p>by Yige Wang | 1870312</p>
-	</div>
-	<div class="nav-menu">
-		<a href="./">Home</a>
-		<a href="./project.html">Project</a>
-		<a href="./portfolio.html">Portfolio</a>
-		<a href="https://github.com/YigeWang0312/data-science">Explore Github</a>
-	</div>
+    <div class="site-title">
+        <h3>Data Science</h3>
+        <p>by Yige Wang | 1870312</p>
+    </div>
+    <div class="nav-menu">
+        <a href="./">Home</a>
+        <a href="./project.html">Project</a>
+        <a href="./portfolio.html">Portfolio</a>
+        <a href="https://github.com/YigeWang0312/data-science">Explore Github</a>
+    </div>
 </nav>
 <main>
 <h1>Portfolio</h1>
@@ -171,8 +175,8 @@
     <li class="half">
         <h2>Week7: Loops and scrapers</h2>
         <p>Build a scraper in Colab, save and chart the results.</p>
-        <div>
-            <img src="images/pie-chart-from-colab.png" width="500px" />
+        <div class="undersized-image">
+            <img src="images/pie-chart-from-colab.png" />
         </div>
     </li>
     <li>
