change the title

--- a/project.html
+++ b/project.html
@@ -19,8 +19,7 @@
 </nav>
 <main>
 <h1>
-    Suggested title: “Vaccination: different states and different rates”
-    (Alternatively, for a less poetic and more factual title, can do anything similar to “Interstate variation in COVID-19 vaccination coverage”)
+    Vaccination: different states and different rates
 </h1>
 <ol class="project">
     <li>
