responsive vega charts

--- a/project.html
+++ b/project.html
@@ -1393,7 +1393,8 @@
     let mapWidth;
     document.querySelectorAll('div.vega-container').forEach(
         async function(el) {
-            mapWidth = mapWidth ?? Math.min(800,el.clientWidth*0.84);
+            mapWidth = mapWidth ?? Math.min(800,el.clientWidth*0.78);
+            const ratio = mapWidth/800;
             const vegaDiv = el.querySelector('div.vega-canvas');
             const dataFunction = vegaDiv.getAttribute('data-data-function');
             const dataEl = el.querySelector('script[type="text/data"]');
@@ -1405,7 +1406,15 @@
                 code = dataEl.innerText;
                 data = JSON.parse(dataEl.innerText);
                 data.width = mapWidth;
-                data.height = data.width*(600/800);
+                data.height = 500*ratio;
+                try {
+                    data.marks[0].encode.update.size.value *= ratio*ratio;
+                    data.marks[2].encode.enter.fontSize.value *= ratio;
+                }
+                catch(e) {
+
+                }
+
                 codeLanguage = 'json';
             }
             else if (dataScript) {
