mobile style fixes

--- a/project.html
+++ b/project.html
@@ -390,7 +390,7 @@
         </table>
         </div>
     </li>
-    <li class="table">
+    <li class="table highlight">
         <h2>Model Results</h2>
         <div class="table">
             <table>
