--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,10 @@
 <head>
     <meta name="viewport" content="width=device-width">
     <link href="styles.css" rel="stylesheet" />
+    <link href="portfolio.css" rel="stylesheet" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/dark.min.css">
 </head>
-<body>
+<body id="portfolio">
 <nav>
     <div class="site-title">
         <h3>Data Science</h3>
