--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 <main>
 <h1>Portfolio</h1>
 <ol class="portfolio">
-    <li>
+    <li id="week1">
         <h2>Week1: Building a site</h2>
         <p>Build your multi-page site. Host it on GitHub, with at least two pages: index (your
             portfolio) and project. Feel free to add more pages (about etc) and make your index and into page. If
@@ -31,7 +31,7 @@
             <p>This <a href="./">Website</a> is hosted via Github pages</p>
         </div>
     </li>
-    <li>
+    <li id="week2">
         <h2>Week2: Embedding</h2>
         <p>Embed three charts, two that are given to you in class. One (as homework) taken from the
             repository of charts that drive www.rapidcharts.io</p>
@@ -41,7 +41,7 @@
             </div>
         </div>
     </li>
-    <li>
+    <li id="week3">
         <h2>Week3: Hosting data</h2>
         <p>Embed two charts of your own design: (a) from a given API, (b) from the same/related
             data saved to your GitHub.</p>
@@ -118,7 +118,7 @@
             </div>
         </div>
     </li>
-    <li>
+    <li class="half">
         <h2>Week5: API driven charts</h2>
         <p>Embed two charts of your own design from two separate APIs that you sign up for &
             gain access to.</p>
@@ -172,8 +172,6 @@
     <li class="half">
         <h2>Week6: Loops and APIs</h2>
         <a href="https://colab.research.google.com/drive/1sWLNa1dzivX0HeaxJY4HqkW5XD9xEgNr#scrollTo=eJFbKDoqkBhH">Colab Scraper</a>
-    </li>
-    <li class="half">
         <h2>Week7: Loops and scrapers</h2>
         <p>Build a scraper in Colab, save and chart the results.</p>
         <div class="undersized-image">
