--- a/portfolio.html
+++ b/portfolio.html
@@ -253,13 +253,15 @@
                 </script>
         </div>
     </li>
-    <li class="half figures">
-        <h2>Week4: Loops and APIs</h2>
+    <li class="half figure">
+        <h2>Week4</h2>
         <p>Created this pie chart using Colab, from OWID covid data</p>
         <div class="undersized-image">
-            <img src="images/pie-chart-from-colab.png" alt="pire chart"/>
+            <figure>
+                <img src="images/pie-chart-from-colab.png" alt="pire chart"/>
+                <figcaption># of hospitalizations per country</figcaption>
+            </figure>
             <a href="https://colab.research.google.com/drive/1YvwpI5Exj16IWXT2e4pKIyUGiSw3IuyV?usp=sharing">
-                # of hospitalizations per country
                 (See in Colab)
             </a>
         </div>
