week 4 image improvement

--- a/portfolio.html
+++ b/portfolio.html
@@ -260,10 +260,11 @@
             <figure>
                 <img src="images/pie-chart-from-colab.png" alt="pire chart"/>
                 <figcaption># of hospitalizations per country</figcaption>
+                <a href="https://colab.research.google.com/drive/1YvwpI5Exj16IWXT2e4pKIyUGiSw3IuyV?usp=sharing" class="source">
+                    (See in Colab)
+                </a>
             </figure>
-            <a href="https://colab.research.google.com/drive/1YvwpI5Exj16IWXT2e4pKIyUGiSw3IuyV?usp=sharing">
-                (See in Colab)
-            </a>
+
         </div>
     </li>
     <li class="half">
